Fixed alignment issue on main page

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 #content {
-    width: 800px;
+    width: 1024px;
     margin: 0 auto;
 }
 
